# DatapackSandbox

./: .dockerignore  .dps_history  .editorconfig  .gitignore  AGENTS.md  README.md  README.zh-CN.md  RENDERING_JUPYTER_PLAN.zh-CN.md  build.gradle.kts  gradle.properties  package-lock.json  package.json  settings.gradle.kts
api/: README.md  cli.api  core.api  manifest.api  renderer.api  testkit.api
browser-runtime/: build.gradle.kts  gradle.lockfile
cli/: build.gradle.kts  gradle.lockfile
core/: build.gradle.kts  gradle.lockfile
docs/: code-test-api.md  code-test-api.zh-CN.md  command-support.md  command-support.zh-CN.md  development-roadmap.md  development-roadmap.zh-CN.md  dps-manifest.schema.json  getting-started.md  getting-started.zh-CN.md  index.md  player-events.md  player-events.zh-CN.md  playground.md  playground.zh-CN.md  rendering-notebook.md  rendering-notebook.zh-CN.md  resource-formats.md  resource-formats.zh-CN.md  runtime-world.md  runtime-world.zh-CN.md  testing-patterns.md  testing-patterns.zh-CN.md  troubleshooting.md  troubleshooting.zh-CN.md  version-profile.md  version-profile.zh-CN.md  vscode-extension.md  vscode-extension.zh-CN.md
gradle/: verification-metadata.xml
integration-tests/: README.md  (+3 more)
jupyter/: MANIFEST.in  README.md  pyproject.toml
jupyter/scripts/: build_offline.py  verify_distribution.py
jupyter/src/datapack_sandbox_kernel/: __init__.py  __main__.py  install.py  kernel.py  runtime.py  session.py
jupyter/tests/: test_install.py  test_kernel_integration.py  test_runtime.py  test_session_integration.py
(+338 files in other folders)
